# multi-package-poetry

./: .gitignore  Makefile  README.md  blah.txt  main.py  pyproject.toml  setup_dev_env.sh
a_pkg/: Makefile  main.py  pyproject.toml
a_pkg/a_pkg/: main.py
b_pkg/: Makefile  main.py  pyproject.toml
b_pkg/b_pkg/: main.py
b_pkg/test/: main_test.py
c_pkg/: Makefile  pyproject.toml
c_pkg/c_pkg/: main.py
docker_images/: Dockerfile.a_pkg
