[tool.poetry]
name = "multi-package-poetry"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8, <3.9"


[tool.poetry.group.dev.dependencies]
numpy = "1.21.3;"
pandas = "1.3.4;"
python-dateutil = "2.8.2;"
pytz = "2021.3;"
six = "1.16.0;"
atomicwrites = "1.4.0;"
attrs = "21.2.0;"
colorama = "0.4.4;"
coverage = "6.1.1;"
iniconfig = "1.1.1;"
packaging = "21.2;"
pluggy = "1.0.0;"
py = "1.10.0;"
pyparsing = "2.4.7;"
pytest = "6.2.5;"
toml = "0.10.2;"
asttokens = "2.0.5"
executing = "0.8.2"
icecream = "2.1.1"
Pygments = "2.10.0;"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
