[tool.poetry]
name = "a-pkg"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8, <3.9"
numpy = "^1.21.3"


[tool.poetry.group.dev.dependencies]
coverage = "^6.1.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
