[tool.poetry]
name = "b_pkg"
version = "0.1.0"
description = ""
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]
readme = "README.md"
packages = [{include = "b_pkg"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"


[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
coverage = "^6.1.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
