[tool.poetry]
name = "c_pkg"
version = "0.1.0"
description = "c package"
authors = ["Kausthub Krishnamurthy <kausthub.k@live.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
seaborn = "^0.11.2"
b_pkg = {path = "../b_pkg"}
a_pkg = {path = "../a_pkg", develop = false}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
